--- a/static/css/base.css
+++ b/static/css/base.css
@@ -271,8 +271,11 @@ body {
   max-height: 200px;
 }
 
-p,
 .nav-link {
+  font-size: clamp(1.125rem, 1.0662rem + 0.2941vw, 1.25rem);
+}
+
+p {
   font-size: clamp(1rem, 0.7647rem + 1.1765vw, 1.5rem);
 }
 
@@ -299,3 +302,9 @@ h5 {
   font-size: clamp(1.25rem, 1.2206rem + 0.1471vw, 1.3125rem);
 }
 
+
+@media only screen and (max-width: 370px) {
+  #nav-logo {
+    width: 200px;
+  }
+}
