Add meta description and kewyors to index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,13 +2,20 @@
 {% load static %}
 
 {% block extra_meta %}
-<meta name="description" content="DESCRIPTION">
+<meta name="description" content="Serving East Midlands best Bratwurst, Chicken and Burgers. Authentic quality German street food and new freshly homemade
+Burgers to takeaway. Order online until late at night with vegan (seitan), vegetarian, pork, beef and chicken options.
+Real Bratwursts (like a super sausage hotdog) a choice of chicken wings, breast, legs and thigh fried chicken pieces. 
+The tastiest, most delicious fast food in the UK. Healthy options available. Currently based in Sheffield city centre.">
+
 <!-- Each page should have a unique description. Page, not site. -->
 <!-- Length can be up to 160 characters on desktop, 130 characters on mobile -->
 <!-- You can have up to 158 description tags (although generally you won't need more than one per page) -->
 <!-- Add a clear call to action, don't duplicate descriptions, include keywords, discounts, or offers if you're selling something -->
 
-<meta name="keywords" content="KEYWORDS">
+<meta name="keywords" content="Bratwurst, brat, bratty, wurst, bockwurst german food, sausage, hotdog, burger, beef,fried chicken, 
+wings, thigh, legs, breast, takeaway, order online, fast food, late night food, vegan,
+vegetarian, veg, food for events, best in Sheffield">
+
 <!-- These are the keywords that your site can be searched with on Google -->
 <!-- Make these single words, relevant to your site, often searched -->
 
