--- a/static/css/base.css
+++ b/static/css/base.css
@@ -273,7 +273,8 @@ body {
 }
 
 .nav-link {
-  font-size: clamp(1.125rem, 1.0662rem + 0.2941vw, 1.25rem);
+  /* font-size: clamp(1.025rem, 1.0662rem + 0.2941vw, 1.1rem); */
+  font-size: clamp(1.025rem, 0.9897rem + 0.1765vw, 1.1rem);
 }
 
 p {
