--- a/products/templates/products/includes/menu-card.html
+++ b/products/templates/products/includes/menu-card.html
@@ -32,9 +32,8 @@
             <div class="image-container">
                 <!-- ADD ARIA LABEL -->
                 <a href="{% url 'product_detail' product.id %}">
-                    <img class="card-img-top card-img" id="imgHover" src="{{ product.image.url }}"
-                        alt="{{ product.name }}"
-                        class="h-50">
+                    <img class="card-img-top card-img" src="{{ product.image.url }}"
+                        alt="{{ product.name }}">
                     <h3 class="card-title menu-hover">{{ product.name }}</h3>
                 </a>
             </div>
@@ -65,12 +64,12 @@
                 </div>
                 <!-- Modal -->
                 <div class="modal custom-modal fade" id="deleteProductModal{{ product.id }}" tabindex="-1"
-                    aria-labelledby="deleteProductModalLabel"
+                    aria-labelledby="deleteProductModalLabel{{ product.id }}"
                     aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="deleteProductModalLabel">Modal title
+                                <h1 class="modal-title fs-5" id="deleteProductModalLabel{{ product.id }}">Modal title
                                 </h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
