Style toast messages

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -79,9 +79,10 @@
         tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
         Dolorem, placeat.</p>
 
+    <!-- CORRECT ARIA-CONTROLS VALUE??????????????????????????? -->
     <button class="btn btn-secondary" onclick="toggleFaq()" id="faqToggle" type="button" data-bs-toggle="collapse"
-        data-bs-target=".multi-collapse"
-        aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Expand All</button>
+        data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand
+    </button>
 
     <div class="accordion border border-5 border-dark" id="faqAccordion">
         {% for question in questions %}
@@ -121,8 +122,6 @@
                                 user{{ answer.like.all.count|pluralize }}</span>     
                                 {% if forloop.last %}
                                     <h3>Feel free to submit another answer below!</h3>
-                                {% else %}
-                                <hr>
                                 {% endif %}
                             {% endif %} 
                          {% if not forloop.last %}
@@ -158,10 +157,10 @@
     <script>
         function toggleFaq() {
             var text = document.getElementById("faqToggle");
-            if (text.innerHTML === "Expand All") {
-                text.innerHTML = "Collapse All";
+            if (text.innerHTML === "Expand") {
+                text.innerHTML = "Collapse";
             } else {
-                text.innerHTML = "Expand All";
+                text.innerHTML = "Expand";
             }
         }
     </script>
