--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,14 @@
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#efc102">
+    <meta name="msapplication-TileColor" content="#efc102">
+    <meta name="theme-color" content="#efc102">
+
     {% endblock %}
 
     {% block extra_js %}
