--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -89,7 +89,7 @@ vegetarian, veg, food for events, best in Sheffield">
             </div>
         </div>
         <div class="col-1">
-            <img src="media/hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
+            <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
