--- a/templates/base.html
+++ b/templates/base.html
@@ -50,10 +50,10 @@
 
     {% block extra_js %}
     {% endblock %}
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
-    <link rel="manifest" href="{{ MEDIA_URL }}static/images/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static/images/favicons/ 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static/images/favicons/ 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static/images/favicons/ 'favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static/images/favicons/ 'site.webmanifest' %}">
 
     <title>GetWurst {% block extra_title %}{% endblock %}</title>
 </head>
