--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon.ico }}">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon.ico }}"> -->
+    <link rel="icon" type="image/x-icon" href="{{ MEDIA_URL }}favicon.ico">
     <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest' }">
 
     <title>GetWurst {% block extra_title %}{% endblock %}</title>
