--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,8 @@
 
     {% block corecss %}
     <!-- bootstrap5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
-        rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -32,16 +30,13 @@
 
     {% block corejs %}
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/6a7752b7f5.js" 
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6a7752b7f5.js" crossorigin="anonymous"></script>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" 
-            crossorigin="anonymous"></script>
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" 
-            crossorigin="anonymous">
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
     </script>
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
@@ -50,14 +45,6 @@
 
     {% block extra_js %}
     {% endblock %}
-    {% static 'css/base.css' %}
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png }}"> -->
-    <!-- <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon.ico }}"> -->
-    <!-- <link rel="icon" type="image/x-icon" href="{{ MEDIA_URL }}favicon.ico">
-    <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest' }"> -->
-
     <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
@@ -69,21 +56,21 @@
 <body class="pb-5">
     {% include 'includes/main-nav.html' %}
     {% include 'includes/cat-nav.html' %}
-    
+
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
-            {% with message.level as level %}
-            {% if level == 40 %}
-            {% include 'includes/toasts/toast_error.html' %}
-            {% elif level == 30 %}
-            {% include 'includes/toasts/toast_warning.html' %}
-            {% elif level == 25 %}
-            {% include 'includes/toasts/toast_success.html' %}
-            {% else %}
-            {% include 'includes/toasts/toast_info.html' %}
-            {% endif %}
-            {% endwith %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
         {% endfor %}
     </div>
     {% endif %}
@@ -96,7 +83,7 @@
     {% endblock %}
 
     {% include "includes/footer.html" %}
-    
+
     {% block postloadjs %}
     <script>
         let toastElList = [].slice.call(document.querySelectorAll('.toast'))
@@ -114,6 +101,3 @@
 </body>
 
 </html>
-
-
-
