--- a/templates/base.html
+++ b/templates/base.html
@@ -56,11 +56,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
     <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest"> -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ STATIC_URL }}apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ STATIC_URL }}favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ STATIC_URL }}favicon-16x16.png">
-    <link rel="manifest" href="{{ STATIC_URL }}site.webmanifest">
-    <link rel="mask-icon" href="{{ STATIC_URL }}safari-pinned-tab.svg" color="#efc102">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ MEDIA_URL }}apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ MEDIA_URL }}favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ MEDIA_URL }}favicon-16x16.png">
+    <link rel="manifest" href="{{ MEDIA_URL }}site.webmanifest">
+    <link rel="mask-icon" href="{{ MEDIA_URL }}safari-pinned-tab.svg" color="#efc102">
     <meta name="msapplication-TileColor" content="#efc102">
     <meta name="theme-color" content="#ffffff">
 
