--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,4 +1,4 @@
-<div class="toast custom-toast rounded-0 border border-dark border-2 mx-auto mb-2 p-1" data-autohide="false">
+<div class="toast rounded-0 border border-dark border-2 mx-auto mb-2 p-1" data-autohide="false">
     <div class="arrow-up arrow-danger"></div>
     <div class="w-100 toast-capper bg-danger"></div>
     <div class="toast-header bg-white text-dark">
