--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,18 +1,16 @@
-<div class="toast custom-toast rounded-0 border border-dark border-2 mx-auto mb-2 p-2" data-autohide="false">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Success!</strong>
-        <button type="button" class="close text-dark ms-auto" data-bs-dismiss="toast" aria-label="Close">
+<div class="toast rounded-0 border border-dark border-2 mx-auto mb-2 p-2" data-autohide="false">
+    <div class="toast-header text-dark">
+        <strong>Success!</strong>
+        <button type="button" class="close ms-auto" data-bs-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="toast-body">
         {{ message }}
     </div>
     {% if total %}
-    <p class="logo-font bg-white text-black py-1">Your Cart ({{ product_count }})</p>
-    <div class="cart-notification-wrapper">
+    <p class="py-1">Your Cart ({{ product_count }})</p>
+    <div>
         {% for item in cart_items %}
         <div class="row">
             <div class="col-3 my-1">
@@ -28,15 +26,13 @@
     <div class="row">
         <div class="col">
             <strong>
-                <p class="mt-3 mb-1 text-black">
-                    Total: <span class="float-right">£{{ total|floatformat:2 }}</span>
+                <p class="mt-3 mb-1">
+                    Total: £{{ total|floatformat:2 }}
                 </p>
             </strong>
-            <a href="{% url 'view_cart' %}" class="btn btn-black btn-block rounded-0">
+            <a href="{% url 'view_cart' %}" class="btn btn-block rounded-0">
                 <span class="text-uppercase">Go To Secure Checkout</span>
-                <span class="icon">
-                    <i class="fas fa-lock"></i>
-                </span>
+                <i class="fas fa-lock"></i>
             </a>
         </div>
     </div>
