--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,13 +1,11 @@
 <div class="toast rounded-0 border border-dark border-2 mx-auto mb-2 p-1" data-autohide="false">
-    <div class="arrow-up arrow-danger"></div>
-    <div class="w-100 toast-capper bg-danger"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Error!</strong>
-        <button type="button" class="close text-dark ms-auto" data-bs-dismiss="toast" aria-label="Close">
+    <div class="toast-header">
+        <strong>Error!</strong>
+        <button type="button" class="close ms-auto" data-bs-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="toast-body">
         {{ message }}
     </div>
 </div>
