Remove unused classes and style checkout_success template

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -7,13 +7,13 @@
 <!-- template taken from code institute boutique ado walkthrough -->
 <div class="container">
 <h1>Shopping Cart</h1>
-<div class="container thick-border">
+<div class="container">
     <div class="row">
         <div class="col">
             {% if cart_items %}
             <div class="table-responsive">
                 <table class="table table-sm table-borderless">
-                    <thead class="text-black">
+                    <thead>
                         <tr>
                             <th scope="col">Product Info</th>
                             <th scope="col"></th>
@@ -67,7 +67,7 @@
                                 </div>
                             </form>
                             <a class="update-link text-info"><small>Update</small></a>
-                            <a class="remove-item text-danger float-right"
+                            <a class="remove-item text-danger"
                                 id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3 w-25">
