--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,9 +6,7 @@
 <div class="container mb-2">
     <div class="row">
         <div class="col">
-            <hr>
             <h2 class="logo-font">Checkout</h2>
-            <hr>
         </div>
     </div>
     <div class="row">
@@ -37,8 +35,6 @@
                 <p class="my-0">
                     <strong>{{ item.product.name }}</strong>
                 </p>
-                <!-- <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}
-               </p> -->
                 <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
             </div>
             <div class="col-3 text-right">
@@ -120,7 +116,7 @@
                         </span>
                         <span class="font-weight-bold">Adjust Cart</span>
                     </a>
-                    <button id="submit-button" class="btn btn-black rounded-0">
+                    <button id="submit-button" class="btn rounded-0">
                         <span class="font-weight-bold">Complete Order</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
