--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,16 +17,14 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <hr>
             <h2 class="logo-font mb-4">Thank You</h2>
-            <hr>
             <p class="text-black">Your order information is below. A confirmation email will be sent to
                 <strong>{{ order.email }}</strong>.</p>
         </div>
     </div>
     <div class="row">
         <div class="col-12 col-lg-7"></div>
-        <div class="order-confirmation-wrapper p-2 border">
+        <div class="p-2 border border-dark border-5">
             <div class="row">
                 <div class="col">
                     <small class="text-muted">Order Info:</small>
@@ -34,7 +32,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Order Number</p>
+                    <p class="mb-0 text-black font-weight-bold">Order Number:</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
                     <p class="mb-0">{{ order.order_number }}</p>
@@ -42,7 +40,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Order Date</p>
+                    <p class="mb-0 text-black font-weight-bold">Order Date:</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
                     <p class="mb-0">{{ order.date }}</p>
@@ -57,8 +55,7 @@
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="small mb-0 text-black font-weight-bold">
-                        {{ item.product.name }}{% if item.product_size %} - Size
-                        {{ item.product.size|upper }}{% endif %}
+                        {{ item.product.name }}
                     </p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
@@ -68,7 +65,7 @@
             {% endfor %}
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Full Name</p>
+                    <p class="mb-0 text-black font-weight-bold">Full Name:</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
                     <p class="mb-0">{{ order.full_name }}</p>
@@ -76,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Phone Number</p>
+                    <p class="mb-0 text-black font-weight-bold">Phone Number:</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
                     <p class="mb-0">{{ order.phone_number }}</p>
@@ -84,7 +81,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="mb-0 text-black font-weight-bold">Order Total</p>
+                    <p class="mb-0 text-black font-weight-bold">Order Total:</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
                     <p class="mb-0">£{{ order.total }}</p>
@@ -97,14 +94,14 @@
     <div class="row">
         <div class="col-12 col-lg-7 text-right">
             {% if from_profile %}
-            <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+            <a href="{% url 'profile' %}" class="btn rounded-0 my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-angle-left"></i>
                 </span>
                 <span class="text-uppercase">Back to Profile</span>
             </a>
             {% else %}
-            <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
+            <a href="{% url 'home' %}" class="btn rounded-0 my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
