--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -97,7 +97,7 @@
             <div class="text-right">
                 <a class="btn btn-outline-black rounded-0" 
                     href="{% url 'products' %}">Cancel</a>
-                <button class="btn btn-black rounded-0" 
+                <button class="btn rounded-0" 
                     type="submit">Add Product
                 </button>
             </div>
