--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,11 +6,11 @@
 <div class="container mb-2">
     <div class="row">
         <div class="col">
-            <h2 class="logo-font">Checkout</h2>
+            <h2>Checkout</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6 order-lg-last mb-5">
+        <div class="col-12 col-lg-6 mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
             <div class="row">
                 <div class="col-7 offset-2">
@@ -25,11 +25,10 @@
         <div class="row">
             <div class="col-2 mb-1">
                 <a href="{% url 'product_detail' item.product.id %}"> 
-                    {% if item.product.image %} <img class="w-100"
+                    <img class="w-100"
                         src="{{ item.product.image.url }}" 
-                        alt="{{ product.name }}"> {% else %} <img class="w-100"
-                        src="{{ MEDIA_URL }}noimage.png" 
-                        alt="{{ product.name }}"> {% endif %} </a>
+                        alt="{{ product.name }}">
+                </a>
             </div>
             <div class="col-7">
                 <p class="my-0">
@@ -45,7 +44,7 @@
         </div>
         {% endfor %}
         <hr class="my-0">
-        <div class="row text-black text-right">
+        <div class="row">
             <div class="col-7 offset-2">
                 <p class="my-0">Order Total:</p>
             </div>
@@ -60,14 +59,14 @@
                 your order.</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 
+                <fieldset class="px-3 mb-5">
+                    <legend class="fieldset-label small px-2 
                     w-auto">Details</legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
                 </fieldset>
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">
+                <fieldset class="px-3 mb-5">
+                    <legend class="fieldset-label small px-2 w-auto">
                         Delivery</legend>
                     {{ order_form.phone_number | as_crispy_field }}
                     {{ order_form.street_address1 | as_crispy_field }}
@@ -75,12 +74,12 @@
                     {{ order_form.town_or_city | as_crispy_field }}
                     {{ order_form.county | as_crispy_field }}
                     {{ order_form.postcode | as_crispy_field }}
-                    <div class="form-check form-check-inline float-right mr-0"> 
+                    <div class="form-check form-check-inline mr-0"> 
                         {% if user.is_authenticated %} 
                             <label class="form-check-label" for="id-save-info">
                                 Save this delivery information to my profile
                             </label>
-                        <input class="form-check-input ml-2 mr-0" 
+                        <input class="form-check-input" 
                             type="checkbox" id="id-save-info" name="save-info"
                             checked> 
                         {% else %}
@@ -98,7 +97,7 @@
                     </div>
                 </fieldset>
                 <fieldset class="px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto">
+                    <legend class="fieldset-label small px-2 w-auto">
                         Payment
                     </legend>
                     <div class="mb-3" id="card-element"></div>
@@ -108,27 +107,23 @@
                         <input type="hidden" value="{{ client_secret }}"
                             name="client_secret">
                 </fieldset>
-                <div class="submit-button text-right mt-5 mb-2">
+                <div class="mt-5 mb-2">
                     <a href="{% url 'view_cart' %}" 
-                        class="btn btn-outline-black rounded-0">
-                        <span class="icon">
+                        class="btn rounded-0">
                             <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="font-weight-bold">Adjust Cart</span>
+                        Adjust Cart
                     </a>
                     <button id="submit-button" class="btn rounded-0">
-                        <span class="font-weight-bold">Complete Order</span>
-                        <span class="icon">
+                        Complete Order
                             <i class="fas fa-lock"></i>
-                        </span>
                     </button>
                     <p class="small text-danger my-0">
-                        <span class="icon">
+
                             <i class="fas fa-exclamation-circle"></i>
-                        </span>
-                        <span>Your card will be charged 
+
+                       Your card will be charged 
                             <strong>£{{ total|floatformat:2 }}</strong>
-                        </span>
+
                     </p>
                 </div>
             </form>
@@ -136,7 +131,7 @@
     </div>
 </div>
 <div id="loading-overlay">
-    <h1 class="text-light logo-font loading-spinner">
+    <h1 class="text-light loading-spinner">
         <span class="icon">
             <i class="fas fa-3x fa-sync-alt fa-spin"></i>
         </span>
