Remove unused classes from all templates

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -89,9 +89,9 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <div class="image-container">
-                            <a href="{{ event.link }}" class="event-link" target="_blank" rel="noopener"
+                            <a href="{{ event.link }}" target="_blank" rel="noopener"
                                 aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
-                                <img class="card-img-top card-img" src="{{ event.image.url }}"
+                                <img class="card-img" src="{{ event.image.url }}"
                                     alt="{{ event.name }} on {{ event.date|date:'M o' }}">
                                 <h2 class="card-title">{{ event.name }}</h2>
                             </a>
