--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -77,7 +77,7 @@ vegetarian, veg, food for events, best in Sheffield">
 
 {% block content %}
 <section class="container">
-    <div class="row hero align-items-center">
+    <div class="row">
         <div class="col-11">
             <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
             <h1 class="py-3">Proper <span class="secondary-color">CHICKEN.</span></h1>
