--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -25,24 +25,20 @@
                             <div class="form-group w-75">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn primary-light form-comtrol-pend
+                                        <button class="decrement-qty btn form-comtrol-pend
                                      rounded-0" data-item_id="{{ product.id }}"
                                             id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
                                                 <i class="fas fa-minus"></i>
-                                            </span>
                                         </button>
                                     </div>
                                     <input class="form-control qty_input border-start-0 border-end-0 mb-3" type="number" name="quantity"
                                         value="1" min="1" max="15" data-item_id="{{ product.id }}"
                                         id="id_qty_{{ product.id }}">
                                     <div class="input-group-append"> 
-                                        <button class="increment-qty btn primary-light
+                                        <button class="increment-qty btn
                                      form-comtrol-pend" data-item_id="{{ product.id }}"
                                             id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
                                                 <i class="fas fa-plus"></i>
-                                            </span>
                                         </button>
                                     </div>
                                 </div>
@@ -50,16 +46,11 @@
                         </div>
                         <div class="col-12">
                             <a href="{% url 'products' %}" class="btn">
-                                <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="text-uppercase">
                                     Back to Menu
-                                </span>
                             </a>
                             <input type="submit" class="btn btn-cta" value="Add to Cart">
                         </div>
-                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
