--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -75,12 +75,8 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6">
-            <hr>
-            <h2 class="logo-font">Product Management</h2>
-            <h5 class="text-muted">Add a product</h5>
-            <hr>
-        </div>
+        <h2>Product Management</h2>
+        <h5 class="text-muted">Add a product</h5>
     </div>
     <div class="container">
         <form action="{% url 'add_product' %}" method="POST" 
@@ -94,8 +90,8 @@
             {% endif %}
             {% endfor %}
             <input type="submit" name="Submit">
-            <div class="text-right">
-                <a class="btn btn-outline-black rounded-0" 
+            <div>
+                <a class="btn rounded-0" 
                     href="{% url 'products' %}">Cancel</a>
                 <button class="btn rounded-0" 
                     type="submit">Add Product
