--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -76,7 +76,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="mb-4">My Profile</h2>
         </div>
     </div>
     <div class="row">
@@ -95,7 +95,7 @@
         {% if orders %}
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
-            <div class="order-history table-responsive">
+            <div class="table-responsive">
                 <table class="table table-sm table-borderless">
                     <thead>
                         <tr>
