--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -99,7 +99,7 @@ vegetarian, veg, food for events, best in Sheffield">
     <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating bratwurst on the streets
         in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
         bratwurst in the UK. Well, now you can, dishing up the good stuff at events and festivals across the North, and
-        at our new home in Sheffield city centre at the top of Fargate, where you can enjoy some serious german street
+        at our new home in Sheffield city centre at the top of Fargate, where you can enjoy some serious German street
         food 7 days a week from lunch till late.</p>
 </section>
 {% endblock %}
