Update footer links, remove instagram logo

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,15 +2,12 @@
 {% block content %}
 <div class="container mt-4">
     <footer id="footer" class="d-flex justify-content-center fixed-bottom py-1">
-        <a href="https://www.facebook.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
+        <a href="https://www.facebook.com/profile.php?id=100089862474013" class="text-decoration-none me-5 text-center"
+            rel="noopener" target="_blank"
             aria-label="Go to Get Wurst Facebook page (opens in a new tab)">
             <i class="fa-brands fa-facebook fs-1"></i>
         </a>
-        <a href="https://www.instagram.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
-            aria-label="Go to Get Wurst Instagram page (opens in a new tab)">
-            <i class="fa-brands fa-instagram fs-1"></i>
-        </a>
-        <a href="https://www.privacypolicygenerator.info/live.php?token=U9Qya6pffZHvuxKlvoUsgnWuvzVZf0Cw"
+        <a href="https://www.privacypolicygenerator.info/live.php?token=X7DfTh8VAoTAY6Wh3CY6epNpSCdMSjtV"
             class="text-decoration-none fs-4 text-center" rel="noopener" target="_blank"
             aria-label="Go to Get Wurst Privacy Policy (opens in a new tab)">
             Privacy Policy
