--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@ vegetarian, veg, food for events, best in Sheffield">
 <!-- Set it to noindex, nofollow for 'thin' pages (pages that don't have much information), where you don't want Google or
     Bing to judge your site based on that content -->
 
-<title>SITE TITLE</title>
+<!-- <title>SITE TITLE</title> -->
 <!-- This is what will display in the tab at the top of a user's browser window -->
 <!-- Title should be less than 60 characters -->
 <!-- Unique title on every page, don't repeat yourself -->
@@ -57,24 +57,8 @@ vegetarian, veg, food for events, best in Sheffield">
 <meta property="og:url" content="#"> <!-- Your page's URL -->
 <meta property="og:site_name" content="SITE NAME"> <!-- Same as what's inside <title> tag -->
 <meta name="author" content="AUTHOR NAME HERE"> <!-- Your name -->
-
-<!-- Twitter -->
-<meta name="twitter:card" content="summary"> <!-- Tells Twitter to expect information for a card -->
-<meta name="twitter:title" content="TITLE OF POST OR PAGE"> <!-- Same as what's inside <title> tag -->
-<!-- The title you want displayed when your page is linked to -->
-<meta name="twitter:description" content="DESCRIPTION OF PAGE CONTENT">
-<!-- Same as what's inside description meta tag -->
-<!-- The description you want displayed when your page is linked to -->
-<meta name="twitter:image" content="URL TO IMAGE">
-<!-- This image must be less than 5MB, and either JPG, PNG, WEBP, or GIF -->
-<!-- URL of image to be displayed when your site is linked to -->
-<!-- Be careful when building non-static sites like your MS3 and MS4, this can be a little tricky -->
-<meta name="twitter:image:alt" content="ALT TEXT FOR IMAGE">
-<!-- Alt text for above image - an accessibility win -->
-<meta name="twitter:site" content="@USERNAME"> <!-- The site's Twitter handle -->
-<meta name="twitter:creator" content="@USERNAME"> <!-- Your personal Twitter handle -->
 {% endblock %}
-
+{% block extra_title %}Home{% endblock %}
 {% block content %}
 <section class="container">
     <div class="row">
