--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Edit {{ product.name }}{% endblock %}
 
 {% block content %}
 <div class="container">
