Add user stories to readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
     <meta name="msapplication-TileColor" content="#efc102">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Get Wurst {% block extra_title %}{% endblock %}</title>
+    <title>Get Wurst: {% block extra_title %}{% endblock %}</title>
 </head>
 
 <body class="pb-5">
