--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -11,7 +11,7 @@
                      <a class="nav-link" href="{% url 'products' %}?category=Chicken">Chicken</a>
                      <!-- <a class="nav-link" href="/menu/#currywursts">Currywurst</a> -->
                  </li>
-                 <li class="nav-item">
+                 <li class="nav-item me-2">
                      <a class="nav-link" href="{% url 'products' %}?category=Burger">Burgers</a>
                      <!-- <a class="nav-link" href="/menu/#burgers">Burgers</a> -->
                  </li>
