--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -100,7 +100,7 @@
             </div>
             {% else %}
             <p class="lead mb-5">Your cart is empty.</p>
-            <a href="{% url 'products' %}" class="btn btn-cta btn-lg mb-3">
+            <a href="{% url 'products' %}" class="btn btn-cta mb-3">
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
