--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -84,7 +84,8 @@
         Dolorem, placeat.</p>
 
     <!-- CORRECT ARIA-CONTROLS VALUE??????????????????????????? -->
-    <button class="btn btn-secondary" onclick="toggleFaq()" id="faqToggle" type="button" data-bs-toggle="collapse"
+    <button class="btn btn-primary border border-dark border-5 border-bottom-0" onclick="toggleFaq()" id="faqToggle"
+        type="button" data-bs-toggle="collapse"
         data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand
     </button>
 
