--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -23,7 +23,7 @@
                 {% endif %}
                 {% endfor %}
                 <div>
-                    <a class="btn btn-secondary" 
+                    <a class="btn btn-primary" 
                         href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-primary" type="submit">
                         Update Product
