--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,7 +1,21 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container header-container">
+
+<div class="col-7 col-md-6 my-auto mx-auto border border-5 border-dark">
+    <h1 class="display-4">
+        Sorry! Looks like you've ended up somewhere not quite meant for you!
+    </h1>
+    <div class="my-5">
+        <h4>
+            <a href="{% url 'products' %}" class="btn btn-lg rounded-0 text-uppercase py-3">
+                Return to shop
+            </a>
+        </h4>
+    </div>
+</div>
+
+<!-- <div class="container header-container">
     <div class="row">
         <div class="col"></div>
     </div>
@@ -20,6 +34,6 @@
                 </h4>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 {% endblock %}
