--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,25 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
+
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+
+<div class="col-7 col-md-6 my-auto mx-auto p-3 border border-5 border-dark">
+    <h1 class="display-4">
+        Sorry! Looks like you've ended up somewhere not quite meant for you!
+    </h1>
+    <div class="my-5">
+        <h4>
+            <a href="{% url 'products' %}" class="btn btn-lg rounded-0 text-uppercase py-3">
+                Return to shop
+            </a>
+        </h4>
     </div>
 </div>
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-black">
-                !!!!!!!!!! Sorry! Looks like you've ended up somewhere not quite meant for you !!!!!
-            </h1>
-            <div class="my-5">
-                <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
-                        Return to shop
-                    </a>
-                </h4>
-            </div>
-        </div>
-    </div>
-</div>
+
 {% endblock %}
