--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -12,7 +12,7 @@
     </h1>
     <div class="my-5">
         <h4>
-            <a href="{% url 'products' %}" class="btn btn-lg rounded-0 text-uppercase py-3">
+            <a href="{% url 'products' %}" class="btn btn-primary btn-lg rounded-0 text-uppercase py-3">
                 Return to shop
             </a>
         </h4>
