--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -91,9 +91,9 @@
             {% endfor %}
             <input type="submit" name="Submit">
             <div>
-                <a class="btn rounded-0" 
+                <a class="btn btn-primary" 
                     href="{% url 'products' %}">Cancel</a>
-                <button class="btn rounded-0" 
+                <button class="btn btn-primary"
                     type="submit">Add Product
                 </button>
             </div>
