--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -71,8 +71,7 @@
                 id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-primary rounded-0 text-uppercase 
-                    float-right">
+                <button class="btn btn-primary text-uppercase">
                     Update Information
                 </button>
             </form>
