Correct accordion-button styling

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -83,10 +83,10 @@
         tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
         Dolorem, placeat.</p>
 
-    <!-- CORRECT ARIA-CONTROLS VALUE??????????????????????????? -->
+
     <button class="btn btn-primary border border-dark border-5 border-bottom-0" onclick="toggleFaq()" id="faqToggle"
         type="button" data-bs-toggle="collapse"
-        data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand
+        data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand All
     </button>
 
     <div class="accordion border border-5 border-dark" id="faqAccordion">
@@ -100,8 +100,7 @@
                     {{ question.body }}
                 </button>
             </h2>
-            <div id="collapse{{question.id}}" class="accordion-collapse collapse multi-collapse
-                {% if forloop.first %} show {% endif %}" 
+            <div id="collapse{{question.id}}" class="accordion-collapse collapse multi-collapse" 
                 aria-labelledby="heading{{question.id}}"
                 data-bs-parent="#faqAccordion">
                 <div class="accordion-body border-0">
@@ -165,10 +164,10 @@
     <script>
         function toggleFaq() {
             var text = document.getElementById("faqToggle");
-            if (text.innerHTML === "Expand") {
-                text.innerHTML = "Collapse";
+            if (text.innerHTML === "Expand All") {
+                text.innerHTML = "Collapse All";
             } else {
-                text.innerHTML = "Expand";
+                text.innerHTML = "Expand All";
             }
         }
     </script>
