--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -14,6 +14,7 @@
             <div class="card-body my-auto">
                 <h1 class="card-title">{{ product.name }}</h1>
                 <p class="card-text">{{ product.description }}</p>
+                <p>£{{ product.price }}</p>
                 <a href="{% url 'products' %}?category={{ product.category }}"
                     class="card-subtitle mb-2 text-muted text-decoration-none">
                     {{ product.category }}
@@ -46,7 +47,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn">
+                            <a href="{% url 'products' %}" class="btn btn-primary">
                                     <i class="fas fa-chevron-left"></i>
                                     Back to Menu
                             </a>
