Add button role to update and remove on cart page

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -66,8 +66,8 @@
                                     </div>
                                 </div>
                             </form>
-                            <a class="update-link text-info"><small>Update</small></a>
-                            <a class="remove-item text-danger"
+                            <a class="update-link text-info" role='button'><small>Update</small></a>
+                            <a class="remove-item text-danger" role='button'
                                 id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3 w-25">
