--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -111,11 +111,11 @@
                 </fieldset>
                 <div class="mt-5 mb-2">
                     <a href="{% url 'view_cart' %}" 
-                        class="btn rounded-0">
+                        class="btn btn-primary">
                             <i class="fas fa-chevron-left"></i>
                         Adjust Cart
                     </a>
-                    <button id="submit-button" class="btn rounded-0">
+                    <button id="submit-button" class="btn btn-cta">
                         Complete Order
                             <i class="fas fa-lock"></i>
                     </button>
