--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -15,13 +15,13 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a href="{% url 'products' %}" class="btn btn-cta btn-lg">
+  <a href="{% url 'products' %}" class="btn btn-cta">
     <span class="icon">
       <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
   </a>
-  <button type="submit" class="btn btn-primary btn-lg">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
 </form>
 </div>
 
