--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -8,7 +8,7 @@
     </h1>
     <div class="my-5">
         <h4>
-            <a href="{% url 'products' %}" class="btn btn-primary btn-lg text-uppercase py-3">
+            <a href="{% url 'products' %}" class="btn btn-primary text-uppercase py-3">
                 Return to shop
             </a>
         </h4>
