--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -4,13 +4,9 @@
 {% endblock %} 
 {% block extra_title %}Checkout{% endblock %}
 {% block content %}
-<!-- template taken from code institute boutique ado walkthrough -->
-<div class="container mb-2 border border-5 border-dark">
-    <div class="row">
-        <div class="col">
-            <h2>Checkout</h2>
-        </div>
-    </div>
+<!-- template adapted from code institute boutique ado walkthrough -->
+<div class="container mb-2 border border-5 border-dark col-10">
+    <h2>Checkout</h2>
     <div class="row">
         <div class="col-12 col-lg-6 mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
@@ -18,7 +14,7 @@
                 <div class="col-7 offset-2">
                     <p class="mb-1 mt-0 small text-muted">Item</p>
                 </div>
-                <div class="col-3 text-right">
+                <div class="col-3">
                     <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                 </div>
             </div>
